hotfix/Fixed viewport height issue on mobile screens

--- a/src/styles/pages/character.module.scss
+++ b/src/styles/pages/character.module.scss
@@ -6,7 +6,7 @@
   max-width: 100vw;
   height: 110vh;
   overflow: hidden;
-  background: url("/character-bg.png") no-repeat center center fixed;
+  background: #111111 url("/character-bg.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -14,11 +14,6 @@
 
   h1 {
     font-family: $font-family-custom;
-  }
-
-  @media (max-width: 768px) {
-    height: auto;
-    max-height: 110vh;
   }
 }
 
