--- a/src/styles/pages/index.module.scss
+++ b/src/styles/pages/index.module.scss
@@ -4,7 +4,6 @@
   max-width: 100vw;
   min-height: 100vh;
   overflow-y: auto;
-  background: url("/roster-bg.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -12,16 +11,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: #000 url("/roster-bg.png") no-repeat fixed center center;
 
   h1 {
     margin: 2rem 0;
     color: $yellow;
     font-family: $font-family-custom;
     text-transform: uppercase;
-  }
-
-  @media (max-width: 768px) {
-    height: auto;
   }
 }
 
